Setup media serving and moved CSS to external file.

--- a/yadba/templates/yadba/index.html
+++ b/yadba/templates/yadba/index.html
@@ -3,9 +3,7 @@
 <html>
   <head>
     <title>Wraithan's Blog of Amazing Stuff!</title>
-    <style type="text/css">
-      #wrapper {width:960px;background-color:#DFDFDF;margin:auto;}
-    </style>
+    <link rel="stylesheet" href="media/css/style.css" type="text/css">
   </head>
   <body>
     <div id="wrapper">
