--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>&lt;3 Software &raquo; {% block title %}Home{% endblock %}</title>
-    <link rel="stylesheet" href="media/css/style.css" type="text/css">
+    <link rel="stylesheet" href="/media/css/style.css" type="text/css">
   </head>
   <body>
     <div id="wrapper">
