--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <DOCTYPE html>
 <html>
   <head>
+    <meta name="google-site-verification" content="DwqvyV4wvAfwVUmzpmcsJ8O3PBBUT8UyWkxMslGCp5A" />
     <title>&lt;3 Software &raquo; {% block title %}Home{% endblock %}</title>
     <link rel="stylesheet" href="/media/css/style.css" type="text/css">
   </head>
