--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,13 @@
       <div id="content">
       {% block content %}{% endblock %}
       </div>
+      <div id="footer">
+	<ul class="horizontal">
+	  <li><a href="{% url blog-full-rss %}"><img src="media/images/feed-icon-16px.png">All Posts</a></li>
+	  <li><a href="{% url blog-category-rss 'General' %}"><img src="media/images/feed-icon-16px.png">General Category</a></li>
+	  <li><a href="{% url blog-category-rss 'Technology' %}"><img src="media/images/feed-icon-16px.png">Technology Category</a></li>
+	</ul>
+      </div>
     </div>
     <script type="text/javascript">
       var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
