--- a/media/css/style.css
+++ b/media/css/style.css
@@ -1,52 +1,87 @@
-#header {
-    text-align: center;
-}
-
-#header h1 {
-    margin-bottom: 0px;
-}
-
-#header h2 {
-    margin-top: 0px;
-}
-
-span.heart {
-    color: #FF0000;
+body {
+    background-color: #DFDFDF;
 }
 
 #wrapper {
     width: 960px;
-    border-width: 2px;
-    border-color: #000000;
-    border-style: solid;
-    background-color: #DFDFDF;
+    background-color: #FFFFFF;
     margin: auto;
+}
+
+#header {
+    text-align: center;
+
+}
+
+#header h1 {
+    padding: 0px;
+    margin: 0px;
+}
+
+#header h2 {
+    padding: 0px;
+    margin: 0px;
 }
 
 #content {
     margin: 10px;
 }
 
-#footer {
-    margin-bottom: 10px;
+#sidebar {
+    float: right;
+    border-left: 2px dotted #DFDFDF;
+    border-bottom: 2px dotted #DFDFDF;
+    width: 240;
+    padding: 0px 0px 10px 10px;
+    margin-left: 10px;
 }
 
-ul.horizontal {
+#footer {
+    margin: 10px;
+}
+
+.heart {
+    color: red;
+}
+
+a:link {
+    color: blue;
+    text-decoration: none;
+}
+
+a:visited {
+    color: blue;
+    text-decoration: none;
+}
+
+a:hover {
+    color: darkblue;
+    text-decoration: underline;
+}
+
+a:active {
+    color: blue;
+    text-decoration: none;
+}
+
+.blog-date {
+    display: inline;
+    font-size: 14px;
+}
+
+.blog-entry {
+    margin-bottom: 20px;
+}
+
+h3 {
+    display: inline;
+}
+
+ul {
     display: inline;
     list-style-type: none;
 }
 
-ul.horizontal li {
-    float: left;
-}
-
-ul.horizontal a {
-    padding-right: 32px;
-    padding-left: 10px;
-    margin: auto;
-    line-height: 16px;
-}
-
-ul.horizontal img {
+img {
     border: none;
 }
