--- a/templates/base.html
+++ b/templates/base.html
@@ -10,16 +10,20 @@
       <div id="header">
 	<h1><span class="heart">&lt;3</span> Software</h1>
 	<h2>Software with a <span class="heart">Heart</span></h2>
+	<hr>
       </div>
       <div id="content">
-      {% block content %}{% endblock %}
+	<div id="sidebar">
+	  <ul>
+	    <li><a href="{% url blog-full-rss %}"><img src="/media/images/feed-icon-16px.png"></a> <a href="{% url blog-index %}">All Posts</a></li>
+	    {% for category in category_list %}
+	    <li><a href="{% url blog-category-rss category %}"><img src="/media/images/feed-icon-16px.png"></a> <a href="{% url blog-category category %}">{{ category }} Category</a></li>
+	    {% endfor %}
+	  </ul>
+	</div>
+	{% block content %}{% endblock %}
       </div>
       <div id="footer">
-	<ul class="horizontal">
-	  <li><a href="{% url blog-full-rss %}"><img src="media/images/feed-icon-16px.png">All Posts</a></li>
-	  <li><a href="{% url blog-category-rss 'General' %}"><img src="media/images/feed-icon-16px.png">General Category</a></li>
-	  <li><a href="{% url blog-category-rss 'Technology' %}"><img src="media/images/feed-icon-16px.png">Technology Category</a></li>
-	</ul>
       </div>
     </div>
     <script type="text/javascript">
