--- a/yadba/templates/yadba/index.html
+++ b/yadba/templates/yadba/index.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 {% for entry in entries_list %}
-      <div class="blog-title"><h2>{{ entry.title }}</h2></div>
-      <div class="blog-date"><p>{{ entry.date_posted|date:"g:iA D d N Y" }}</p></div>
+      <div class="blog-title"><h3><a href="{{ entry.get_absolute_url }}">{{ entry.title }}</a></h3></div>
+      <p class="blog-date">Posted by <em>Wraithan</em> at {{ entry.date_posted|date:"g:iA D d N Y" }}</p>
       <div class="blog-entry">{{ entry.body|restructuredtext }}</div>
 {% endfor %}
 {% endblock %}
