Made header link back to index.

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div id="wrapper">
-      <div id="header">
+      <div id="header"><a href="{% url blog-index %}">
 	<h1><span class="heart">&lt;3</span> Software</h1>
-	<h2>Software with a <span class="heart">Heart</span></h2>
+	<h2>Software with a <span class="heart">Heart</span></h2></a>
 	<hr>
       </div>
       <div id="content">
